<resources>
    <string name="app_name">Truck lagbe</string>
    <string name="give_number_text">আপনার মোবাইল নাম্বার</string>
    <string name="toolbar_text">ট্রাক লাগবে</string>
    <string name="number_hint">মোবাইল নাম্বার প্রবেশ করান</string>
    <string name="go_ahead">এগিয়ে যান</string>
    <string name="info1">এগিয়ে যাওয়া দ্বারা আপনি আমাদের </string>
    <string name="info2">ব্যবহারের শর্তাবলী </string>
    <string name="info3">এবং </string>
    <string name="info4">গোপনীয়তা মেনে নিচ্ছেন।</string>
    <string name="app__name">ট্রাক ভাড়ার\n১ নম্বর অ্যাপ</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">আব্দুল্লাহ মাসুদ</string>
    <string name="nav_header_subtitle">01709347512</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">হোম</string>
    <string name="help_title">সাহায্য</string>
    <string name="settings_title">সেটিংস</string>
    <string name="discount_title">ডিসকাউন্ট</string>
    <string name="trip_history_title">ট্রিপ হিস্টরি</string>

    <string name="menu_home">চলতি ট্রিপ</string>
    <string name="menu_trip_history">ট্রিপ হিস্টরি</string>
    <string name="menu_discount">ডিসকাউন্ট</string>
    <string name="menu_settings">সেটিংস</string>
    <string name="menu_help">সাহায্য</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Doctors Details String -->
    <string name="dr_kaji_eduQulification">MBBS (Sir Salimullah Medical College and Mitford Hospital),\n
FCPS (Medicine)\n
MRCP (England)\n
MD(Cardiology, BSMMU, PG Hospital, Dhaka)
</string>

    <string name="doctorsDetails">-Dr. Mohammod Hossain is a 32 years experienced
physician. He has vast experience in working with
critical patients of skin, allergy sexually transmitted
deseases and sexology.\n\n

-He also has 26 years working experience in skin Dept.
of Dhaka Medecal College Hospital and Mitford Hospital in
different capacities. At present he is working as Senior
Consultant of Dermatjology and Venereology in\n\n

-300 Bedded Hospital, Narayanganj</string>

    <string name="drKaji_institute">National Institute of Cardiovascular Deseases and Kuwait Bangladesh Friendship Government Hospital</string>

    <string name="drSadi_edu_qualification">MBBS(SZMCH),CCD (BIRDEM),PGT(Medicine,Gastroenterology)</string>
</resources>