<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_current_trip"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trip_hostory"
            android:icon="@drawable/ic_trip_history"
            android:title="@string/menu_trip_history" />
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/ic_discount"
            android:title="@string/menu_discount" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help"/>
    </group>
</menu>