<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="#FAFBFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="200dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

            app:title="@string/toolbar_text"

            android:background="@drawable/collapse_image"
            app:contentScrim="?attr/colorAccent">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@drawable/collapse_sticer_back"
                android:orientation="vertical"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app__name"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:fitsSystemWindows="true"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="none"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:layout_width="match_parent">

                <!-- <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/white_background_6dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:padding="5dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_truck_logo"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toolbar_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </LinearLayout> -->

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SigninPage">

            <TextView
                android:id="@+id/signinTextTypeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:textColor="#4784EC"
                android:textStyle="normal"
                android:textSize="14sp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/mobileTextID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_number_text"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toBottomOf="@+id/signinTextTypeID"
                app:layout_constraintStart_toStartOf="parent"
                />
            
            <EditText
                android:id="@+id/signinNumberID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:hint="@string/number_hint"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:maxLength="11"
                android:inputType="number"
                android:backgroundTintMode="add"
                android:backgroundTint="@color/black"
                android:background="@drawable/mobile_text_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileTextID"/>

            <Button
                android:id="@+id/signinBtnID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/go_ahead"
                android:textColor="#979797"
                android:textSize="17sp"
                android:enabled="false"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:drawableRight="@drawable/ic_right_arrow"
                android:paddingRight="10dp"
                android:drawableTint="#979797"
                android:background="@drawable/white_background_6dp"
                android:backgroundTint="#CCD7DD"
                app:layout_constraintTop_toBottomOf="@+id/signinNumberID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <LinearLayout
                android:id="@+id/infoContainerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/signinBtnID"
                app:layout_constraintStart_toStartOf="@+id/signinBtnID"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/info1"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/info2"
                    android:layout_marginLeft="2dp"
                    android:textSize="12sp"
                    android:textColor="#28945F"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/info3"
                    android:layout_marginLeft="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/info4"
                android:textColor="#28945F"
                android:layout_marginTop="2dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/infoContainerID"
                app:layout_constraintTop_toBottomOf="@+id/infoContainerID"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>